--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
 	<version>1.0-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.xmlgraphics</groupId>
+			<artifactId>fop</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
